EL-465 partner endpoint: second attempt at merging (#12)
* New endpoint to persist partner data

* Refactor db-inefficient method
