# swagger/v5/swagger.yaml
@@ -837,6 +837,409 @@ paths:
                               description: Amount of payment made
                               example: 101.01
         required: true
+  "/assessments/{assessment_id}/partner_financials":
+    post:
+      summary: 'create '
+      tags:
+      - Assessment components
+      description: Adds details of an applicant's partner.
+      parameters:
+      - name: assessment_id
+        in: path
+        description: Unique identifier of the assessment
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: successful
+        '422':
+          description: Unprocessable Entity
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - partner
+              description: Full information about an applicant's partner
+              example:
+                partner:
+                  date_of_birth: '1992-07-22'
+                  employed: true
+                irregular_incomes:
+                - income_type: student_loan
+                  frequency: annual
+                  amount: 101.01
+                employments:
+                - name: A
+                  client_id: B
+                  payments:
+                  - client_id: C
+                    date: '1992-07-22'
+                    gross: 101.01
+                    benefits_in_kind: 0
+                    tax: 11
+                    national_insurance: 3
+                    net_employment_income: 87.01
+                regular_transactions:
+                - category: benefits
+                  operation: credit
+                  frequency: three_monthly
+                  amount: 101.01
+                state_benefits:
+                - name: D
+                  payments:
+                  - client_id: E
+                    date: '1992-07-22'
+                    amount: 101.01
+                    flags:
+                      multi_benefit: false
+                additional_properties:
+                - value: 500000.01
+                  outstanding_mortgage: 999.99
+                  percentage_owned: 100
+                  shared_with_housing_assoc: false
+                  subject_matter_of_dispute: false
+                capital_items:
+                  bank_accounts:
+                  - value: 1.01
+                    description: F
+                    subject_matter_of_dispute: false
+                  non_liquid_capital:
+                  - value: 1.01
+                    description: G
+                    subject_matter_of_dispute: false
+                vehicles:
+                - value: 5000
+                  loan_amount_outstanding: 1000
+                  date_of_purchase: '2017-01-23'
+                  in_regular_use: true
+                  subject_matter_of_dispute: false
+              properties:
+                partner:
+                  type: object
+                  description: The partner of the applicant
+                  required:
+                  - date_of_birth
+                  - employed
+                  properties:
+                    date_of_birth:
+                      type: string
+                      format: date
+                      example: '1992-07-22'
+                      description: Applicant's partner's date of birth
+                    employed:
+                      type: boolean
+                      example: true
+                      description: Whether the applicant's partner is employed
+                irregular_incomes:
+                  type: array
+                  required:
+                  - income_type
+                  - frequency
+                  - amount
+                  description: One or more irregular payment details
+                  items:
+                    type: object
+                    description: Irregular payment detail
+                    properties:
+                      income_type:
+                        type: string
+                        enum:
+                        - student_loan
+                        - unspecified_source
+                        description: Identifying name for this irregular income payment
+                        example: student_loan
+                      frequency:
+                        type: string
+                        enum:
+                        - annual
+                        - quarterly
+                        description: Frequency of the payment received
+                        example: annual
+                      amount:
+                        type: number
+                        format: decimal
+                        example: 101.01
+                employments:
+                  type: array
+                  required:
+                  - name
+                  - client_id
+                  - payments
+                  description: One or more employment income details
+                  items:
+                    type: object
+                    description: Employment income detail
+                    properties:
+                      name:
+                        type: string
+                        description: Identifying name for this employment - e.g. employer's
+                          name
+                      client_id:
+                        type: string
+                        description: Client supplied id to identify the employment
+                      payments:
+                        type: array
+                        required:
+                        - client_id
+                        - date
+                        - gross
+                        - benefits_in_kind
+                        - tax
+                        - national_insurance
+                        - net_employment_income
+                        description: One or more employment payment details
+                        items:
+                          type: object
+                          description: Employment payment detail
+                          properties:
+                            client_id:
+                              type: string
+                              description: Client supplied id to identify the payment
+                              example: '05459c0f-a620-4743-9f0c-b3daa93e5711'
+                            date:
+                              type: string
+                              format: date
+                              description: Date payment received
+                              example: '1992-07-22'
+                            gross:
+                              type: number
+                              format: decimal
+                              description: Gross payment income received
+                              example: '101.01'
+                            benefits_in_kind:
+                              type: number
+                              format: decimal
+                              description: Benefit in kind amount received
+                            tax:
+                              type: number
+                              format: decimal
+                              description: Amount of tax paid
+                            national_insurance:
+                              type: number
+                              format: decimal
+                              description: Amount of national insurance paid
+                            net_employment_income:
+                              type: number
+                              format: decimal
+                              description: Net payment income received
+                regular_transactions:
+                  type: array
+                  required:
+                  - category
+                  - operation
+                  - frequency
+                  - amount
+                  description: Zero or more regular transactions
+                  items:
+                    type: object
+                    description: regular transaction detail
+                    properties:
+                      category:
+                        type: string
+                        enum:
+                        - benefits
+                        - friends_or_family
+                        - maintenance_in
+                        - property_or_lodger
+                        - pension
+                        - housing_benefit
+                        - child_care
+                        - rent_or_mortgage
+                        - maintenance_out
+                        - legal_aid
+                        description: Identifying category for this regular transaction
+                        example: benefits
+                      operation:
+                        type: string
+                        enum:
+                        - credit
+                        - debit
+                        description: Identifying operation for this regular transaction
+                        example: credit
+                      frequency:
+                        type: string
+                        enum:
+                        - three_monthly
+                        - monthly
+                        - four_weekly
+                        - two_weekly
+                        - weekly
+                        - unknown
+                        description: Frequency with which regular transaction is made
+                          or received
+                        example: three_monthly
+                      amount:
+                        type: number
+                        format: decimal
+                        example: 101.01
+                state_benefits:
+                  type: array
+                  description: One or more state benefits receved by the applicant's
+                    partner and categorized by name
+                  items:
+                    type: object
+                    required:
+                    - name
+                    - payments
+                    description: State benefit payment detail
+                    properties:
+                      name:
+                        type: string
+                        description: Name of the state benefit
+                        example: my_state_bnefit
+                      payments:
+                        type: array
+                        required:
+                        - client_id
+                        - date
+                        - amount
+                        description: One or more state benefit payments details
+                        items:
+                          type: object
+                          description: Payment detail
+                          properties:
+                            client_id:
+                              type: string
+                              format: uuid
+                              description: Client identifier for payment received
+                              example: '05459c0f-a620-4743-9f0c-b3daa93e5711'
+                            date:
+                              type: string
+                              format: date
+                              description: Date payment received
+                              example: '1992-07-22'
+                            amount:
+                              type: number
+                              format: decimal
+                              description: Amount of payment received
+                              example: 101.01
+                            flags:
+                              type: object
+                              description: Line items that should be flagged to caseworkers
+                                for review
+                              example:
+                                multi_benefit: true
+                              properties:
+                                multi_benefit:
+                                  type: boolean
+                additional_properties:
+                  type: array
+                  required:
+                  - value
+                  - outstanding_mortgage
+                  - percentage_owned
+                  - shared_with_housing_assoc
+                  description: One or more additional properties owned by the applicant's
+                    partner
+                  items:
+                    type: object
+                    description: Additional property details
+                    properties:
+                      value:
+                        type: number
+                        format: decimal
+                        description: Financial value of the property
+                        example: 500000.01
+                      outstanding_mortgage:
+                        type: number
+                        format: decimal
+                        description: Amount outstanding on all mortgages against this
+                          property
+                        example: 999.99
+                      percentage_owned:
+                        type: number
+                        format: decimal
+                        description: Percentage share of the property which is owned
+                          by the applicant's partner
+                        example: 99.99
+                      shared_with_housing_assoc:
+                        type: boolean
+                        description: Property is shared with a housing association
+                      subject_matter_of_dispute:
+                        type: boolean
+                        description: Property is the subject of a dispute
+                capital_items:
+                  type: object
+                  required:
+                  - bank_accounts
+                  - non_liquid_capital
+                  description: Element's of the applicant's partners capital
+                  properties:
+                    bank_accounts:
+                      type: array
+                      description: One or more account details
+                      example:
+                      - value: 1.01
+                        description: test name 1
+                        subject_matter_of_dispute: false
+                      - value: 100.01
+                        description: test name 2
+                        subject_matter_of_dispute: true
+                      items:
+                        type: object
+                        description: Account detail
+                        properties:
+                          value:
+                            type: number
+                            format: decimal
+                          description:
+                            type: string
+                          subject_matter_of_dispute:
+                            type: boolean
+                    non_liquid_capital:
+                      type: array
+                      description: One or more non liquid assets owned by the client's
+                        partner
+                      example:
+                      - value: 1.01
+                        description: test name 1
+                        subject_matter_of_dispute: false
+                      - value: 100.01
+                        description: test name 2
+                        subject_matter_of_dispute: true
+                      items:
+                        type: object
+                        description: Asset detail
+                        properties:
+                          value:
+                            type: number
+                            format: decimal
+                          description:
+                            type: string
+                          subject_matter_of_dispute:
+                            type: boolean
+                vehicles:
+                  type: array
+                  description: One or more vehicles' details
+                  items:
+                    type: object
+                    required:
+                    - value
+                    - date_of_purchase
+                    properties:
+                      value:
+                        type: number
+                        format: decimal
+                        description: Financial value of the vehicle
+                      loan_amount_outstanding:
+                        type: number
+                        format: decimal
+                        description: Amount remaining, if any, of a loan used to purchase
+                          the vehicle
+                      date_of_purchase:
+                        type: string
+                        format: dates
+                        description: Date vehicle purchased by the applicant's partner
+                      in_regular_use:
+                        type: boolean
+                        description: Vehicle in regular use or not
+                      subject_matter_of_dispute:
+                        type: boolean
+                        description: Whether this vehicle is the subject of a dispute
+        required: true
   "/assessments/{assessment_id}/proceeding_types":
     post:
       summary: 'create '
